<resources>
    <string name="app_name">PetTrack</string>
    <string name="title_activity_pet_track">PetTrackActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_email">uzzielitosmix@matalospapi.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mi_perfil">Mi Perfil</string>
    <string name="menu_mis_mascotas">Mis Mascotas</string>
    <string name="menu_calendario">Calendario</string>
    <string name="title_activity_tipo_mascota">TipoMascota</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_tipo_mascota">¿Qué tipo es tu mascota?</string>

    <string name="card_nombre_mascota">Darketa</string>
    <string name="card_edad">Edad:</string>
    <string name="card_edad_value">3 años </string>
    <string name="card_tipo">Tipo:</string>
    <string name="card_tipo_value">Perro</string>
    <string name="card_image_description">Imagen de la mascota</string>


    <string name="mi_cuenta_titulo">Mi Cuenta</string>
    <string name="nombres_label">Nombre(s)</string>
    <string name="apellidos_label">Apellidos</string>
    <string name="telefono_label">Número de contacto</string>
    <string name="fecha_nacimiento_label">Fecha de nacimiento</string>
    <string name="correo_label">Correo</string>

    <!-- Valores (ejemplo) -->
    <string name="nombres_valor">Uzziel Yered</string>
    <string name="apellidos_valor">De Contreras González</string>
    <string name="telefono_valor">987-65-43-210</string>
    <string name="fecha_nacimiento_valor">8 de octubre de 2024</string>
    <string name="correo_valor">uzzielitomix@matalospapi.com</string>
    <string name="tipoVac">Tipo</string>
    <string name="tipo">Tipo</string>
    <string name="fecha_de_aplicaci_n">Fecha de aplicación</string>
    <string name="fecha_de_aplicaci_n_vac">Fecha de aplicación</string>
    <string name="titulo_del_eve">Titulo del evento</string>
    <string name="titulo_del_evento">Titulo del evento</string>
    <string name="descripci_n">Descrioción</string>
    <string name="descripcion_del_evento">Descripición del evento</string>
    <string name="direcci_n_evento">Dirección del evento</string>
    <string name="direcci_n">Dirección</string>
    <string name="mascota">Mascota</string>
    <string name="mascota_spinner">Mascota</string>
    <string name="tipo_de_evento">Tipo de evento</string>
    <string name="repetir">Repetir</string>
    <string name="tipo_evento">Tipo de evento</string>
    <string name="repetir_evento">Repetir</string>
    <string name="guardar">Guardar</string>
    <string name="indicaciones">Selecciona el boton \"+\" para subir los archivos pdf necesarios de tu mascota</string>
    <string name="mas">+</string>
    <string name="nombre_mascota">Nombre de la mascota</string>
    <string name="raza_mascota">Raza de la mascota</string>
    <string name="edad_mascota">Edad de la mascota</string>
    <string name="color_mascota">Color de la mascota</string>
    <string name="peso_mascota">Peso de la mascota</string>
    <string name="descripcion_mascota">Descripción de la mascota</string>
    <string name="seleccionar_foto">Seleccionar Foto</string>
    <string name="agregar">Agregar</string>
    <string name="selecc_fecha">Seleccione unafecha</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="escribe_tu_contrase_a">Escribe tu contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="escribe_correo_electronico">Escribe tu correo electronico</string>
</resources>