<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F88349"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.PetTrack.PopupOverlay" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="220dp"
        android:text="@string/titulo_del_eve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addTitulo"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/titulo_del_evento"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="249dp"
        android:text="@string/descripci_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTitulo" />

    <EditText
        android:id="@+id/addDescripcion"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripcion_del_evento"
        android:inputType="textMultiLine"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />

    <TextView
        android:id="@+id/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="264dp"
        android:text="@string/direcci_n_evento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDescripcion" />

    <EditText
        android:id="@+id/addDireccion"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/direcci_n"
        android:inputType="text"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />

    <TextView
        android:id="@+id/txtMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="44dp"
        android:text="@string/mascota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDireccion" />

    <Spinner
        android:id="@+id/spinnerMascota"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/spinner_background"
        android:hint="@string/mascota_spinner"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDireccion" />

    <Spinner
        android:id="@+id/spinnerTipoEv"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/spinner_background"
        android:hint="@string/tipo_de_evento"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMascota" />

    <Spinner
        android:id="@+id/spinnerRepetir"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/spinner_background"
        android:hint="@string/repetir"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipoEv" />

    <TextView
        android:id="@+id/txtTipoEv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        android:text="@string/tipo_evento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMascota" />

    <TextView
        android:id="@+id/txtRepetir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="64dp"
        android:text="@string/repetir_evento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipoEv" />

    <Button
        android:id="@+id/btnGuardarEv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="153dp"
        android:backgroundTint="#F88349"
        android:text="@string/guardar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRepetir" />

</androidx.constraintlayout.widget.ConstraintLayout>