<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pettrack.pettrack.activitypettrack.ui.home.HomeFragment"
        android:label="@string/menu_mi_perfil"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pettrack.pettrack.activitypettrack.ui.gallery.GalleryFragment"
        android:label="@string/menu_mis_mascotas"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pettrack.pettrack.activitypettrack.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_slideshow" />
</navigation>